--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "my-portfolio",
+  "name": "modern_portfolio",
   "version": "1.0.0",
-  "description": "My website",
+  "description": "Responsive portfolio website",
   "main": "index.js",
+  "homepage": "https://bradtraversy.github.io/modern_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maheralayoubi/My-Portfolio.git"
-  },
-  "author": "Maher",
+  "author": "Brad Traversy",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/maheralayoubi/My-Portfolio/issues"
-  },
-  "homepage": "https://github.com/maheralayoubi/My-Portfolio#readme",
   "dependencies": {
-    "node-sass": "^4.13.0"
+    "gh-pages": "^1.2.0",
+    "node-sass": "^4.9.2"
   }
 }
